Minor fixes in descriptions of works an bio.

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </div>
         <div class="text" id="works">
             <h2>Works</h2>
-            <p>Below are some stories I wrote in high school for a summer. They are unpolished and contain all the wonderful, special spelling and grammar mistakes that I made when I originally wrote them.</p>
+            <p>Below are some stories I wrote as part of a story exchange with my friends during a high school summer. They are unpolished and contain all the wonderful spelling and grammar mistakes that I made when I originally wrote them.</p>
             <ul>
               <li><a href="stories/Wk1_Someone_dies.txt">Week 1</a></li>
               <li><a href="stories/Wk2_Poem(s).txt">Week 2</a></li>
@@ -65,14 +65,14 @@
               <li><a href="stories/Wk9_Escape.txt">Week 9</a></li>
               <li><a href="stories/Wk10_Rush_of_Adrenaline.txt">Week 10</a></li>
               <li><a href="stories/Wk1X_Dead_Poets_Plague.txt">Week 1X</a></li>
-              <li><a href="stories/Wk1X_Short_with_no_theme.txt">Week 1X</a></li>
+              <li><a href="stories/Wk1X_Short_with_no_theme.txt">Weekssssssssssssssssssssssssssssssss 1X</a></li>
             </ul>
         </div>
         <div class="text" id="about">
           <h2>About <a id="me" href="images/meh.jpg" target="_blank">Me</a></h2>
             <p>My name is Alexander Hwang, and I am a rising junior pursuing a Bachelor of Science in Electrical Engineering and Computer Science at the University of California, Berkeley.</p>
-            <p>Here's a short introduction my cutural tastes:<br>Two of my favorite television shows are Sherlock and Running Man. Recent movies that I've watched and loved include Interstellar, Mad Max, and Gone Girl. My favorite and most recently read books are from The Kingkiller Chronicle by Patrick Rothfuss, and I am anxiously awaiting for his thrid installment. I also love listening to music and exploring new songs and artists on Spotify. Some of my favorite artists include St. Motel, ST&Delta;RC&Delta;DI&Delta;N, B&Oslash;RNS, Jukebox the Ghost, and Oh Wonder.</p>
-            <p>Spotify is my primary platform for music, and my activity is pretty dynamic. I listen to a lot of songs and do a bunch of filtering and processing of songs and artists into my different playlists. Below is a pretty recent playlist that I started so that I would eventually have a playlist of awesome songs to play in public.</p>
+            <p>Two of my favorite television shows are Sherlock and Running Man. Recent movies that I've watched and loved include Interstellar, Mad Max, and Gone Girl. My favorite and most recently read books are from The Kingkiller Chronicle by Patrick Rothfuss, and I am anxiously awaiting for his thrid installment. I also love listening to music and exploring new songs and artists on Spotify. Some of my favorite artists include St. Motel, ST&Delta;RC&Delta;DI&Delta;N, B&Oslash;RNS, Jukebox the Ghost, and Oh Wonder.</p>
+            <p>Spotify is my primary platform for enjoying music, and my activity on there is pretty dynamic. I listen to a lot of songs and do a bunch of filtering and processing of songs and artists into my different playlists. Below is a pretty recent playlist that I started so that I would eventually have a playlist of awesome songs to play in public.</p>
             <div id='spotify'>
                 <iframe src="https://embed.spotify.com/?uri=spotify%3Auser%3A1244704702%3Aplaylist%3A0LqsTVX32C5wYXNWaQQy8u&theme=white" width="300" height="380" frameborder="0" allowtransparency="true"></iframe>
             </div>
