--- a/index.html
+++ b/index.html
@@ -65,13 +65,13 @@
               <li><a href="stories/Wk9_Escape.txt">Week 9</a></li>
               <li><a href="stories/Wk10_Rush_of_Adrenaline.txt">Week 10</a></li>
               <li><a href="stories/Wk1X_Dead_Poets_Plague.txt">Week 1X</a></li>
-              <li><a href="stories/Wk1X_Short_with_no_theme.txt">Weekssssssssssssssssssssssssssssssss 1X</a></li>
+              <li><a href="stories/Wk1X_Short_with_no_theme.txt">Week 1X</a></li>
             </ul>
         </div>
         <div class="text" id="about">
           <h2>About <a id="me" href="images/meh.jpg" target="_blank">Me</a></h2>
             <p>My name is Alexander Hwang, and I am a rising junior pursuing a Bachelor of Science in Electrical Engineering and Computer Science at the University of California, Berkeley.</p>
-            <p>Two of my favorite television shows are Sherlock and Running Man. Recent movies that I've watched and loved include Interstellar, Mad Max, and Gone Girl. My favorite and most recently read books are from The Kingkiller Chronicle by Patrick Rothfuss, and I am anxiously awaiting for his thrid installment. I also love listening to music and exploring new songs and artists on Spotify. Some of my favorite artists include St. Motel, ST&Delta;RC&Delta;DI&Delta;N, B&Oslash;RNS, Jukebox the Ghost, and Oh Wonder.</p>
+            <p>Three of my favorite television shows are Sherlock, Rick &amp; Morty, and Running Man. Mvies that I've watched and loved include Interstellar, Mad Max, and Gone Girl. My favorite and most recently read books are from The Kingkiller Chronicle by Patrick Rothfuss, and I am anxiously awaiting for his thrid installment. I also love listening to music and exploring new songs and artists on Spotify.</p>
             <p>Spotify is my primary platform for enjoying music, and my activity on there is pretty dynamic. I listen to a lot of songs and do a bunch of filtering and processing of songs and artists into my different playlists. Below is a pretty recent playlist that I started so that I would eventually have a playlist of awesome songs to play in public.</p>
             <div id='spotify'>
                 <iframe src="https://embed.spotify.com/?uri=spotify%3Auser%3A1244704702%3Aplaylist%3A0LqsTVX32C5wYXNWaQQy8u&theme=white" width="300" height="380" frameborder="0" allowtransparency="true"></iframe>
@@ -81,7 +81,7 @@
             <h2>Contact/More</h2>
             <div id="links">
                 <div id="contact_info">
-                    <p>Email: <a href="mailto:a.hwang@berkeley.edu">a.hwang@berkeley.edu</a>
+                    <p>Email: ude.yelekreb@gnawh.a</p>
                 </div>
                 <div id="linkedin">
                     <a href="https://www.linkedin.com/pub/alexander-hwang/b2/700/87"><img src="images/linkedin_myprofile_160x33.png" width="160" height="33" border="0" alt="View Alexander Hwang's profile on LinkedIn"></a>
