--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           <h2>About <a id="me" href="images/meh.jpg" target="_blank">Me</a></h2>
             <p>My name is Alexander Hwang, and I am a rising junior pursuing a Bachelor of Science in Electrical Engineering and Computer Science at the University of California, Berkeley.</p>
             <p>Three of my favorite television shows are Sherlock, Rick &amp; Morty, and Running Man. Mvies that I've watched and loved include Interstellar, Mad Max, and Gone Girl. My favorite and most recently read books are from The Kingkiller Chronicle by Patrick Rothfuss, and I am anxiously awaiting for his thrid installment. I also love listening to music and exploring new songs and artists on Spotify.</p>
-            <p>Spotify is my primary platform for enjoying music, and my activity on there is pretty dynamic. I listen to a lot of songs and do a bunch of filtering and processing of songs and artists into my different playlists. Below is a pretty recent playlist that I started so that I would eventually have a playlist of awesome songs to play in public.</p>
+            <p>Spotify is my primary platform for enjoying music, and my activity on there is pretty dynamic. I listen to a lot of songs and do a bunch of filtering and processing of songs and artists into my different playlists. Below is a playlist I curate to play in public. The newer songs are towards the bottom and tend to fit my current tastes much better than the older songs at the top.</p>
             <div id='spotify'>
                 <iframe src="https://embed.spotify.com/?uri=spotify%3Auser%3A1244704702%3Aplaylist%3A0LqsTVX32C5wYXNWaQQy8u&theme=white" width="300" height="380" frameborder="0" allowtransparency="true"></iframe>
             </div>
