Update about me and some other minor tweaks.

--- a/index.html
+++ b/index.html
@@ -65,14 +65,14 @@
               <li><a href="stories/Wk9_Escape.txt">Week 9</a></li>
               <li><a href="stories/Wk10_Rush_of_Adrenaline.txt">Week 10</a></li>
               <li><a href="stories/Wk1X_Dead_Poets_Plague.txt">Week 1X</a></li>
-              <li><a href="stories/Wk1X_Short_with_no_theme.txt">Week 1X</a></li>
+              <li><a href="stories/Wk1X_Short_with_no_theme.txt">Week 1Y</a></li>
             </ul>
         </div>
         <div class="text" id="about">
           <h2>About <a id="me" href="images/meh.jpg" target="_blank">Me</a></h2>
-            <p>My name is Alexander Hwang, and I am a rising junior pursuing a Bachelor of Science in Electrical Engineering and Computer Science at the University of California, Berkeley.</p>
-            <p>Three of my favorite television shows are Sherlock, Rick &amp; Morty, and Running Man. Mvies that I've watched and loved include Interstellar, Mad Max, and Gone Girl. My favorite and most recently read books are from The Kingkiller Chronicle by Patrick Rothfuss, and I am anxiously awaiting for his thrid installment. I also love listening to music and exploring new songs and artists on Spotify.</p>
-            <p>Spotify is my primary platform for enjoying music, and my activity on there is pretty dynamic. I listen to a lot of songs and do a bunch of filtering and processing of songs and artists into my different playlists. Below is a playlist I curate to play in public. The newer songs are towards the bottom and tend to fit my current tastes much better than the older songs at the top.</p>
+            <p>My name is Alexander Hwang, and I am pursuing a Bachelor of Science in Electrical Engineering and Computer Science at the University of California, Berkeley.</p>
+            <p>I have a love affair with semicolons, get severe anxiety when I need to get a haircut, love rice, and am thankful that I can eat dairy products without having severe diarrhea. Three of my favorite television shows are Sherlock, Rick &amp; Morty, and Running Man. Movies that I've watched and loved include Interstellar, Mad Max, Your Name, and Gone Girl. Steins;Gate is arguably my favorite anime and you should watch it all. My favorite and most recently read books are from The Kingkiller Chronicle by Patrick Rothfuss, and I am anxiously awaiting for his thrid installment. I also love listening to music and exploring new songs and artists on Spotify.</p>
+            <p>Spotify is my primary platform for enjoying music, and my activity on there is pretty dynamic. I listen to a lot of songs and do a bunch of filtering and processing of songs and artists into my different playlists. Below is a playlist I curate to play in public, a.k.a. my mixtape. The newer songs are towards the bottom and tend to fit my current tastes much better than the older songs at the top.</p>
             <div id='spotify'>
                 <iframe src="https://embed.spotify.com/?uri=spotify%3Auser%3A1244704702%3Aplaylist%3A0LqsTVX32C5wYXNWaQQy8u&theme=white" width="300" height="380" frameborder="0" allowtransparency="true"></iframe>
             </div>
@@ -81,13 +81,10 @@
             <h2>Contact/More</h2>
             <div id="links">
                 <div id="contact_info">
-                    <p>Email: ude.yelekreb@gnawh.a</p>
+                    <p>Email: a.hwang at berkeley.edu</p>
                 </div>
                 <div id="linkedin">
                     <a href="https://www.linkedin.com/pub/alexander-hwang/b2/700/87"><img src="images/linkedin_myprofile_160x33.png" width="160" height="33" border="0" alt="View Alexander Hwang's profile on LinkedIn"></a>
-                </div>
-                <div id="github">
-                    <a href="https://www.github.com/alxhwg/"><img src="images/GitHub/GitHub-Mark-64px.png"></a>
                 </div>
             </div>
         </div>
