--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div style="background-color:#7b5241"><span>#7b5241</span></div>
         </div>  -->
         <div class="text" id="wip">
-            <p>Clearly, this website is a work in progress. I hope to have more to share in the future so that this website can be more enjoyable.</p>
+            <p>Clearly, this website is a work in progress. I hope to have more to share in the future so that this website can be more entertaining. Last edited Januray 2017.</p>
         </div>
         <div class="text" id="works">
             <h2>Works</h2>
@@ -72,7 +72,7 @@
           <h2>About <a id="me" href="images/meh.jpg" target="_blank">Me</a></h2>
             <p>My name is Alexander Hwang, and I am pursuing a Bachelor of Science in Electrical Engineering and Computer Science at the University of California, Berkeley.</p>
             <p>I have a love affair with semicolons, get severe anxiety when I need to get a haircut, love rice, and am thankful that I can eat dairy products without having severe diarrhea. Three of my favorite television shows are Sherlock, Rick &amp; Morty, and Running Man. Movies that I've watched and loved include Interstellar, Mad Max, Your Name, and Gone Girl. Steins;Gate is arguably my favorite anime and you should watch it all. My favorite and most recently read books are from The Kingkiller Chronicle by Patrick Rothfuss, and I am anxiously awaiting for his thrid installment. I also love listening to music and exploring new songs and artists on Spotify.</p>
-            <p>Spotify is my primary platform for enjoying music, and my activity on there is pretty dynamic. I listen to a lot of songs and do a bunch of filtering and processing of songs and artists into my different playlists. Below is a playlist I curate to play in public, a.k.a. my mixtape. The newer songs are towards the bottom and tend to fit my current tastes much better than the older songs at the top.</p>
+            <p>Spotify is my primary platform for enjoying music, and my activity on there is pretty dynamic. I listen to a lot of songs and do a bunch of filtering and processing of songs and artists into my different playlists. Below is a playlist I curate to play in public, a.k.a. my mixtape. The newer songs are towards the bottom and tend to fit my current tastes much better than the older songs at the top. HONNE is probably my favorite artist at the time of writing this.</p>
             <div id='spotify'>
                 <iframe src="https://embed.spotify.com/?uri=spotify%3Auser%3A1244704702%3Aplaylist%3A0LqsTVX32C5wYXNWaQQy8u&theme=white" width="300" height="380" frameborder="0" allowtransparency="true"></iframe>
             </div>
