--- a/index.html
+++ b/index.html
@@ -48,9 +48,8 @@
             <div style="background-color:#7b5241"><span>#7b5241</span></div>
         </div>  -->
         <div class="text" id="wip">
-            <p>Clearly, this website is a work in progress. I hope to have more to share in the future so that this website can be more entertaining.
-	    Interesting fact: if you reload the page, you won't be able to see the image load in!
-	    Last edited Januray 2017.</p>
+	    <p>Clearly, this website is a work in progress. I hope to have more to share in the future so that this website can be more entertaining.</p>
+	    <p>Interesting fact: if you reload the page, you won't be able to see the image load in!</p>
         </div>
         <div class="text" id="works">
             <h2>Works</h2>
@@ -90,5 +89,8 @@
                 </div>
             </div>
         </div>
+	<div class="text" id="edit-date">
+	    <p>Last edited January 2017.</p>
+	</div>
     </body>
 </html>
